# 1337_Call_Me_Maybe

./: .gitignore  Makefile  Project_README.md  README.md  in.md  pyproject.toml
data/output/: function_calling_results.json  function_calls.json
smollm2_backend/: __init__.py
src/: __main__.py  display.py  generator.py  io_handler.py
