[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Function-calling via constrained LLM decoding (42 project)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "llm_sdk"]
